// SPDX-License-Identifier: Apache-2.0
//
// Copyright 2023-2026 The Enola <https://enola.dev> Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// TODO Move this file, and related part of BUILD, into .test sub-package

// TODO Change dev.enola.protobuf.test to dev.enola.common.protobuf.test
package dev.enola.protobuf.test;

// import "google/protobuf/any.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";

option java_string_check_utf8 = true;
// TODO Change dev.enola.protobuf.test to dev.enola.common.protobuf.test
option java_package = "dev.enola.protobuf.test";
option java_multiple_files = true;
// TODO Change dev/enola/core/test to dev/enola/common/protobuf/test
option go_package = "dev/enola/core/test";

enum TestEnum {
  TEST_ENUM_UNSPECIFIED = 0;
  TEST_ENUM_A = 1;
  TEST_ENUM_B = 2;
}

message TestSimple {
  string text = 1;
  uint32 number = 2;
  google.protobuf.Timestamp ts = 3;
  bytes bytes = 4;
  TestEnum an_enum = 5;
  enum TestNestedEnum {
    TEST_NESTED_ENUM_UNSPECIFIED = 0;
    TEST_NESTED_ENUM_X = 1;
    TEST_NESTED_ENUM_Y = 2;
  }
  TestNestedEnum a_nested_enum = 6;
}

message TestRepeated {
  repeated string lines = 1;
}

message TestComplex {
  TestSimple simple = 1;
  repeated TestSimple simples = 2;
}
